# nameCorrector

./: .gitignore  CMakeLists.txt  README.md  TODO  listelement.cpp  listelement.h  listelement_gui.cpp  listelement_gui.h  listwindow.cpp  listwindow.h  mainwindow.cpp  mainwindow.h
Layouts/odg/: ListElement_GUI.odg  ListWindow.odg  MainWindow.odg  NewElementWindow.odg
docs/: How_to_use.odt
inc/: connectablelist.h  listelement.h  listelement_gui.h  listwindow.h  mainwindow.h  newelementwindow.h
src/: connectablelist.cpp  listelement.cpp  listelement_gui.cpp  listwindow.cpp  main.cpp  mainwindow.cpp  newelementwindow.cpp
